--- a/src/SalesOrderWpf.UI/SalesOrderWpf.UI.csproj
+++ b/src/SalesOrderWpf.UI/SalesOrderWpf.UI.csproj
@@ -67,8 +67,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="OrdersForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrdersForm.xaml.cs">
+      <DependentUpon>OrdersForm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
