--- a/src/SalesOrderWpf.UI/SalesOrderWpf.UI.csproj
+++ b/src/SalesOrderWpf.UI/SalesOrderWpf.UI.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\FormHelper.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -100,6 +101,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SalesOrderWpf.Business\SalesOrderWpf.Business.csproj">
+      <Project>{22ccfb2f-1db9-46a6-ad8f-426fe46ebaa4}</Project>
+      <Name>SalesOrderWpf.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SalesOrderWpf.Domain\SalesOrderWpf.Domain.csproj">
+      <Project>{c1d73574-de48-4e6f-8abb-5c98f8b47cda}</Project>
+      <Name>SalesOrderWpf.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
